# fast_api

./: .env  .gitignore  Dockerfile  README.md  db.sqlite  docker-compose.yml  pyproject.toml  requirements.txt
demo/: config.py  main.py  models.py  serializers.py  views.py
fast_api/: config.py  main.py  models.py  views.py
tests/: helpers.py  test_fast_api.py
